--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["*"],
+  "activationEvents": [
+    "*"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "tick-tock-code.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "extension.changeTypingDelta",
+        "title": "Change Typing Delta"
       }
     ]
   },
