호환버전 1.59.1 (21년 7월 버전) activationEvents : onStartupFinished

--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
   },
   "homepage": "https://github.com/egoing/CodeCounter#readme",
   "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.79.0"
-  },
-  "categories": [
+  "publisher":"egoing", "engines": { "vscode": "^1.79.1" }, "categories": [
     "Other"
   ],
   "activationEvents": [
-    "*"
-  ],
+    "onStartupFinished"
+],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
